examples/test/testpolicy15711.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15711
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key31: value28
      key6: value35
      key36: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value18
          key0: value38
          key23: value26
      podSelector:
        matchLabels:
          key31: value46
          key17: value22
          key7: value30
